
syntax = "proto3";
package pb;
 
message ThingMSG {
    enum MSGType {
      SYSLAMBDA = 0;
      LAMBDA = 1;
      DOCKER = 2;
    }

    MSGType msg_type = 1;
    int32 msg_id = 2;
    string func = 3;
    string cid = 4;
    repeated string cmd = 5;
    repeated string args = 6;
    repeated string env = 7;
    repeated string volume = 8;
    repeated string permision = 9;
}
